Refactor to deprecate credits system

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -225,9 +225,9 @@
                     "title": "Κρατήσεις & Αλλαγές",
                     "description": "Ειδοποιήσεις σχετικά με ακυρώσεις κρατήσεων, αλλαγές και επανακράτηση μαθημάτων."
                 },
-                "subscriptions": {
-                    "title": "Συνδρομές & Credits",
-                    "description": "Αποδείξεις πληρωμών, ενημερώσεις συνδρομών και ειδοποιήσεις credits."
+                "payments": {
+                    "title": "Πληρωμές & Ανταμοιβές",
+                    "description": "Αποδείξεις πληρωμών, πόντοι που κερδήθηκαν και ειδοποιήσεις κουπονιών."
                 }
             },
             "status": {
@@ -446,6 +446,8 @@
         "earlyBirdDiscount": "Έκπτωση πρώιμης κράτησης: {{time}}",
         "lastMinuteDiscount": "Έκπτωση τελευταίας στιγμής: {{time}}",
         "discountActive": "Έκπτωση μέχρι: {{time}}",
+        "save": "Εξοικονόμηση",
+        "payWithStripe": "Πληρωμή {{price}} με Stripe",
         "cancellation": {
             "freeCancelWithTime": "Λόγω {{reason}}, μπορείτε να ακυρώσετε αυτό το μάθημα δωρεάν για τα επόμενα {{time}}. Θα λάβετε πλήρη επιστροφή των credits σας.",
             "freeCancelWithoutTime": "Λόγω {{reason}}, μπορείτε να ακυρώσετε αυτό το μάθημα και θα λάβετε πλήρη επιστροφή των credits σας.",
@@ -605,11 +607,16 @@
     "payment": {
         "success": "Επιτυχής Πληρωμή!",
         "successMessage": "Η πληρωμή σας επεξεργάστηκε επιτυχώς.",
+        "bookingConfirmed": "Η κράτησή σας επιβεβαιώθηκε. Μπορείτε να τη δείτε στις κρατήσεις σας.",
         "cancelled": "Η Πληρωμή Ακυρώθηκε",
-        "cancelledMessage": "Η πληρωμή σας ακυρώθηκε.",
+        "cancelledMessage": "Η πληρωμή σας ακυρώθηκε. Δεν έγινε καμία χρέωση.",
         "returnToApp": "Επιστροφή στην Εφαρμογή",
-        "viewCredits": "Προβολή Credits",
-        "viewSubscription": "Προβολή Συνδρομής"
+        "viewBookings": "Προβολή Κρατήσεων",
+        "processingPayment": "Επεξεργασία πληρωμής...",
+        "paymentFailed": "Αποτυχία Πληρωμής",
+        "paymentFailedMessage": "Δεν μπορέσαμε να επεξεργαστούμε την πληρωμή σας. Παρακαλώ δοκιμάστε ξανά.",
+        "securePayment": "Ασφαλής πληρωμή",
+        "poweredByStripe": "Με τη δύναμη του Stripe"
     },
     "news": {
         "title": "Νέα",
@@ -619,7 +626,7 @@
         "loading": "Φόρτωση νέων...",
         "welcomeBanner": {
             "title": "Καλώς ήρθατε! 🎉",
-            "subtitle": "Χαιρόμαστε που είστε μαζί μας! Προσθέσαμε 10 credits στον λογαριασμό σας για να ξεκινήσετε. Κοιτάξτε γύρω, περιηγηθείτε στις διαφορετικές επιχειρήσεις και κρατήστε οποιαδήποτε τάξη σας αρέσει!",
+            "subtitle": "Χαιρόμαστε που είστε μαζί μας! Λάβατε ένα κουπόνι δωρεάν μαθήματος για να ξεκινήσετε. Κοιτάξτε γύρω, περιηγηθείτε στις διαφορετικές επιχειρήσεις και κλείστε το πρώτο σας μάθημα δωρεάν!",
             "exploreButton": "Αναζήτηση"
         },
         "noUpcomingClasses": {
@@ -800,8 +807,43 @@
         "pleaseAnswerQuestions": "Παρακαλώ απαντήστε στις παρακάτω ερωτήσεις πριν την κράτηση.",
         "classPrice": "Τιμή μαθήματος",
         "total": "Σύνολο",
-        "confirmBooking": "Επιβεβαίωση Κράτησης · {{credits}} πόντοι",
+        "confirmBooking": "Επιβεβαίωση Κράτησης · €{{price}}",
         "booking": "Κράτηση...",
         "answerRequired": "Παρακαλώ απαντήστε σε όλες τις υποχρεωτικές ερωτήσεις"
+    },
+    "coupons": {
+        "title": "Κουπόνια",
+        "myCoupons": "Τα Κουπόνια μου",
+        "available": "Διαθέσιμα Κουπόνια",
+        "noCoupons": "Δεν υπάρχουν διαθέσιμα κουπόνια",
+        "freeClass": "Δωρεάν Μάθημα",
+        "freeClassDescription": "Κλείστε οποιοδήποτε μάθημα δωρεάν",
+        "expiresIn": "Λήγει σε {{days}} ημέρες",
+        "expired": "Έληξε",
+        "used": "Χρησιμοποιήθηκε",
+        "useCoupon": "Χρήση Κουπονιού",
+        "applyCoupon": "Εφαρμογή Κουπονιού",
+        "couponApplied": "Το Κουπόνι Εφαρμόστηκε",
+        "couponRemoved": "Το Κουπόνι Αφαιρέθηκε",
+        "welcomeBonus": "Μπόνους Καλωσορίσματος",
+        "referralBonus": "Μπόνους Σύστασης",
+        "validUntil": "Ισχύει έως {{date}}"
+    },
+    "points": {
+        "title": "Πόντοι",
+        "myPoints": "Οι Πόντοι μου",
+        "balance": "Υπόλοιπο Πόντων",
+        "earn": "Κέρδισε Πόντους",
+        "redeem": "Εξαργύρωσε Πόντους",
+        "history": "Ιστορικό Πόντων",
+        "noHistory": "Δεν υπάρχει ιστορικό πόντων",
+        "earnedFromBooking": "Κερδήθηκαν από κράτηση",
+        "redeemedForClass": "Εξαργυρώθηκαν για δωρεάν μάθημα",
+        "cashback": "{{percent}}% επιστροφή",
+        "pointsEarned": "+{{points}} πόντοι",
+        "pointsRedeemed": "-{{points}} πόντοι",
+        "redeemForFreeClass": "Εξαργύρωση για δωρεάν μάθημα",
+        "notEnoughPoints": "Δεν υπάρχουν αρκετοί πόντοι",
+        "pointsRequired": "Απαιτούνται {{points}} πόντοι"
     }
 }
