Refactor app to use stripe connect and pay per booking

--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -255,8 +255,7 @@
                 "tabs": {
                     "details": "Λεπτομέρειες",
                     "discounts": "Εκπτώσεις",
-                    "questions": "Ερωτήσεις",
-                    "widgets": "Widgets"
+                    "questions": "Ερωτήσεις"
                 }
             },
             "templateCard": {
